# fit_lib

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg  setup.py
AD_files/: adPython2DFitter.py  adPython2DFitter.py~
etc/: module.ini
fit_lib/: __init__.py  autogain.py  camera.py  fit_lib.py  levmar.py  static.py
fit_lib/squareFit/: ald_square.py  analy_square_beams.py  decide_varibles.py  functions_for_beam_analyse.py
tests/: save_image  save_image.py  save_images  save_images.py  test_fit  test_fit.py
tests/c/: Makefile  fit_lib.c  xprofile.txt
tests/c/minpack/: Makefile  lmdergauss.c  xprofile.h
