[metadata]
name = fit_lib
description = Gaussian 2D Fitter library
license = Apache License 2.0
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
install_requires =
    cothread
    numpy
    scipy
    pytest

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

